--- a/requirements.txt
+++ b/requirements.txt
@@ -1,35 +1,56 @@
 annotated-types==0.6.0
-anyio==4.2.0
+anyio==4.9.0
+cachetools==5.5.2
 certifi==2023.11.17
 chardet==3.0.4
 charset-normalizer==3.3.2
 click==8.1.7
+dotenv==0.9.9
 fastapi==0.108.0
-googletrans==3.1.0a0
-h11==0.9.0
+google-ai-generativelanguage==0.6.15
+google-api-core==2.25.0rc0
+google-api-python-client==2.168.0
+google-auth==2.39.0
+google-auth-httplib2==0.2.0
+google-genai==1.11.0
+google-generativeai==0.8.5
+googleapis-common-protos==1.70.0
+googletrans==4.0.2
+grpcio==1.71.0
+grpcio-status==1.71.0
+h11==0.14.0
 h2==3.2.0
 hpack==3.0.0
 hstspreload==2024.1.5
-httpcore==0.9.1
-httpx==0.13.3
+httpcore==1.0.8
+httplib2==0.22.0
+httpx==0.28.1
 hyperframe==5.2.0
 idna==2.10
 lxml==5.1.0
 numpy==1.26.3
 pandas==2.1.4
+proto-plus==1.26.1
+protobuf==5.29.4
+pyasn1==0.6.1
+pyasn1_modules==0.4.2
 pydantic==2.5.3
 pydantic_core==2.14.6
+pyparsing==3.2.3
 python-dateutil==2.8.2
+python-dotenv==1.1.0
 pytrends==4.9.2
 pytz==2023.3.post1
 requests==2.31.0
 rfc3986==1.5.0
+rsa==4.9.1
 six==1.16.0
 sniffio==1.3.0
 starlette==0.32.0.post1
-typing_extensions==4.9.0
+tqdm==4.67.1
+typing_extensions==4.13.2
 tzdata==2023.4
+uritemplate==4.1.1
 urllib3==2.1.0
 uvicorn==0.25.0
-dotenv==0.9.9
-google-generativeai==0.8.5
+websockets==15.0.1
